# anvil-web3

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt
anvil_web3/: __init__.py  anvil.py  rpc.py  types.py  wrapper.py
examples/: send_ether.py  set_balance.py  set_future_block_timestamp.py  usdc_spoof.py
